manifests/common/namespace-osaan.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: osaan-dev
  labels:
    name: osaan-dev
    istio-injection: enabled
