manifests/common/microservices-destinationrules.yaml
# DestinationRules for service-to-service communication
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: competence-matching-svc-dr
  namespace: osaan-dev
spec:
  host: competence-matching-svc.osaan-dev.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: competence-profile-svc-dr
  namespace: osaan-dev
spec:
  host: competence-profile-svc.osaan-dev.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: employee-svc-dr
  namespace: osaan-dev
spec:
  host: employee-svc.osaan-dev.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: skill-catalog-svc-dr
  namespace: osaan-dev
spec:
  host: skill-catalog-svc.osaan-dev.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: osaan-admin-backend-svc-dr
  namespace: osaan-dev
spec:
  host: osaan-admin-backend-svc.osaan-dev.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
